Fix typo in comments

--- a/remove-seasonality-and-normalize-data.ipynb
+++ b/remove-seasonality-and-normalize-data.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
         "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -102,7 +102,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:19.457657Z",
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:20.017312Z",
@@ -343,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:20.358748Z",
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:20.693526Z",
@@ -414,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:21.058522Z",
@@ -458,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:21.452072Z",
@@ -485,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:21.838711Z",
@@ -673,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:22.488818Z",
@@ -700,7 +700,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:23.074035Z",
@@ -775,7 +775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:24.219509Z",
@@ -812,9 +812,7 @@
         "id": "EGE0OFqVyx7H"
       },
       "source": [
-        "Fortunately for us there are not.\n",
-        "\n",
-        "If there were you could handle them in some of the following ways."
+        "Fortunately for us there are not."
       ]
     },
     {
@@ -830,17 +828,19 @@
         "id": "NMG-7j60yx7H"
       },
       "source": [
-        "# Imputation of constant value\n",
-        "df_beer = df_beer.fillna(0)\n",
+        "If there were you could handle them in some of the following ways.\n",
         "\n",
-        "# Mean imputation\n",
-        "df_beer = df_beer.fillna(df_beer.mean())\n",
+        "* Imputation of constant value\n",
+        "`df_beer = df_beer.fillna(0)`\n",
         "\n",
-        "# Backward-fill imputation (or last observation carried forward)\n",
-        "df_beer = df_beer.bfill()\n",
+        "* Mean imputation\n",
+        "`df_beer = df_beer.fillna(df_beer.mean())`\n",
         "\n",
-        "# Linear interpolation\n",
-        "df_beer = df_beer.interpolate(method='linear')"
+        "* Backward-fill imputation (or last observation carried forward)\n",
+        "`df_beer = df_beer.bfill()`\n",
+        "\n",
+        "* Linear interpolation\n",
+        "`df_beer = df_beer.interpolate(method='linear')`"
       ]
     },
     {
@@ -863,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:22:25.460792Z",
@@ -890,7 +890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:23:38.726628Z",
@@ -917,7 +917,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:23:49.119745Z",
@@ -968,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2023-02-15T09:25:31.096058Z",
@@ -1058,7 +1058,7 @@
         "id": "f1L7ui5RL3ng",
         "outputId": "7790404b-95db-49c2-ca07-a6c8214caf46"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1095,12 +1095,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Calculate each year's variance (equivalent to standard deviation)\n",
+        "# Calculate each year's average\n",
         "monthly_average = df_beer.groupby(df_beer.index.month).mean()\n",
         "mapped_monthly_average = df_beer.index.map(\n",
         "    lambda x: monthly_average.loc[x.month])\n",
         "\n",
-        "# Standardize each year's variance\n",
+        "# Standardize each year's average\n",
         "df_beer = df_beer / mapped_monthly_average\n",
         "\n",
         "# Plot outcome\n",
@@ -1118,7 +1118,7 @@
         "id": "EiImMGdtKVt7",
         "outputId": "4d955d96-10d9-466a-ac2c-d7a3775a6e93"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1184,7 +1184,7 @@
         "id": "-d_dtDgoKVor",
         "outputId": "96b8ea89-5343-4f2e-aa8c-5d1b363d1b8b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1241,7 +1241,7 @@
         "id": "QJB2ZkP6KVl8",
         "outputId": "cf2a3497-def8-436f-ed18-d842fb0a7811"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1291,7 +1291,7 @@
         "id": "FGa5gl3bKVi8",
         "outputId": "56e29486-cdc1-4729-f3f1-06ee8b3ca066"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1349,7 +1349,7 @@
       "metadata": {
         "id": "ZfJI7fNqKhQ_"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1383,7 +1383,7 @@
       "metadata": {
         "id": "mfAR-blwKhOG"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1403,7 +1403,7 @@
         "id": "JyFtYcMEKhLe",
         "outputId": "8bd2e105-9b06-4d09-b4d6-096e09bd5468"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
